--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,9 @@
   <body> 
     <div class="contact-container">
       <div class="main-title">
-        <h1 href="./index.html">lanora</h1> 
+        <h1 href="https://norala.github.io/index.html">lanora</h1> 
         <br>
-        <h5 href="./index.html">web desing & development</h5>
+        <h5 href="https://norala.github.io/index.html">web desing & development</h5>
     </div>
     <div class="form-container">
         <div class="">
