Add styles to project page

--- a/impressum.html
+++ b/impressum.html
@@ -9,10 +9,10 @@
   <body>  
     <div class="impressum-container">
         <div class="main-title">
-            <h1 href="./index.html">lanora</h1> 
-            <br>
-            <h5 href="./index.html">web desing & development</h5>
-        </div>
+          <h1><a href="./index.html">lanora</a></h1> 
+          <br>
+          <h5><a href="./index.html">web desing & development</a></h5>
+      </div>
         <div class="impressum-text">
           <h5>Legal Disclosure</h5>
           Information in accordance with Section 5 TMG
