--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
   <body>  
     <div id="container-bgd" class="container">
         <div id ="site-name">
-            <h1 id="title" class="title-main">lanora</h1> 
+            <h1 id="title" class="title-main"> <a href="./index.html">lanora</a></h1> 
             <br>
-            <h5 id="subtitle" class="subtitle-main">web desing & development</h5>
+            <h5 id="subtitle" class="subtitle-main"> <a href="./index.html">web desing & development</a></h5>
             <div class="nav">
                     <button id="projects-button">projects</button>
                 </div>
@@ -20,7 +20,7 @@
                 <img class="breathe-main" src="../pictures/breathe-main.png">
         <div class="project-content">
             <div class="left-content">
-                <img class="breathe-home" src="../pictures/studio-mockup.jpg">
+                <img class="breathe-home" src="../pictures/home.jpg">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -39,7 +39,16 @@
                 voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
                 occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
                 anim id est laborum. </p>
-                <img class="breathe-home" src="../pictures/studio-mockup.jpg">
+                <img class="breathe-home" src="../pictures/studio.jpg">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
+                    anim id est laborum. </p>
+                    <img class="breathe-home" src="../pictures/courses.jpg">
             </div>
         </div>
     </div>
