--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,9 @@
   <body> 
     <div class="contact-container">
       <div class="main-title">
-        <h1 href="https://norala.github.io/index.html">lanora</h1> 
-        <br>
-        <h5 href="https://norala.github.io/index.html">web desing & development</h5>
+          <h1><a href="./index.html">lanora</a></h1> 
+          <br>
+          <h5><a href="./index.html">web desing & development</a></h5>
     </div>
     <div class="form-container">
         <div class="">
@@ -33,10 +33,17 @@
               </form>
             </div>
     </div> 
+    <div class="contact-info">
+        <p>
+            Nora Lakics
+            <br>Saint-Julien-Strasse 4/7, 5020 Salzburg<br>
+            +436645519165<br><a href="mailto:nora.la7@gmail.com">nora.la7@gmail.com</a>
+        </p>
+      </div>
     </div>
     <div class="footer">
+      <a class="about" href="./about.html">about</a>
       <a class="contact" href="./contact.html">contact</a>
-      <a class="impressum" href="./impressum.html">impressum</a>
   </div>
-  <script type="text/javascript" src="./docs/bundle.js"></script></body>
+  <script type="text/javascript" src="/norala.github.io/bundle.js"></script></body>
 </html>
