--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>  
     <div id="container-bgd" class="container">
         <div id ="site-name">
-            <h1 id="title" class="title-main">lanora</h1> 
+            <h1 id="title" class="title-main"> <a href="./index.html">lanora</a></h1> 
             <br>
-            <h5 id="subtitle" class="subtitle-main">web desing & development</h5>
+            <h5 id="subtitle" class="subtitle-main"> <a href="./index.html">web desing & development</a></h5>
             <div class="nav">
                     <button id="projects-button">projects</button>
                 </div>
@@ -20,7 +20,7 @@
                 <img class="breathe-main" src="../pictures/breathe-main.png">
         <div class="project-content">
             <div class="left-content">
-                <img class="breathe-home" src="../pictures/studio-mockup.jpg">
+                <img class="breathe-home" data-aos="fade-down" aos-duration="500" src="../pictures/home.jpg">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -39,14 +39,27 @@
                 voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
                 occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
                 anim id est laborum. </p>
-                <img class="breathe-home" src="../pictures/studio-mockup.jpg">
+                <img class="breathe-home" src="../pictures/studio.jpg">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
+                    anim id est laborum. </p>
+                    <img class="breathe-home" src="../pictures/courses.jpg">
             </div>
+            <div class="footer">
+                    <a class="about" href="./about.html">about</a>
+                    <a class="contact" href="./contact.html">contact</a>
+            </div> 
         </div>
     </div>
-        <div class="footer">
-                <a class="contact" href="./contact.html">contact</a>
-                <a class="impressum" href="./impressum.html">impressum</a>
+    <div id="footer-main">
+            <a class="about" href="./about.html">about</a>
+            <a class="contact" href="./contact.html">contact</a>
         </div> 
     </div>
-  <script type="text/javascript" src="./docs/bundle.js"></script></body>
+  <script type="text/javascript" src="/norala.github.io/bundle.js"></script></body>
 </html>
