--- a/impressum.html
+++ b/impressum.html
@@ -9,10 +9,10 @@
   <body>  
     <div class="impressum-container">
         <div class="main-title">
-            <h1 href="./index.html">lanora</h1> 
-            <br>
-            <h5 href="./index.html">web desing & development</h5>
-        </div>
+          <h1><a href="./index.html">lanora</a></h1> 
+          <br>
+          <h5><a href="./index.html">web desing & development</a></h5>
+      </div>
         <div class="impressum-text">
           <h5>Legal Disclosure</h5>
           Information in accordance with Section 5 TMG
@@ -44,8 +44,8 @@
           <i>Quelle: </i><a href="http://www.translate-24h.de" target="_blank">Übersetzungsdienst translate-24h.de</a> <br>
       </div>
     <div class="footer">
+      <a class="about" href="./about.html">about</a>
       <a class="contact" href="./contact.html">contact</a>
-      <a class="impressum" href="./impressum.html">impressum</a>
         </div>
-  <script type="text/javascript" src="./docs/bundle.js"></script></body>
+  <script type="text/javascript" src="/norala.github.io/bundle.js"></script></body>
 </html>
