Added about page and styles

--- a/src/contact.html
+++ b/src/contact.html
@@ -33,10 +33,17 @@
               </form>
             </div>
     </div> 
+    <div class="contact-info">
+        <p>
+            Nora Lakics
+            <br>Saint-Julien-Strasse 4/7, 5020 Salzburg<br>
+            +436645519165<br><a href="mailto:nora.la7@gmail.com">nora.la7@gmail.com</a>
+        </p>
+      </div>
     </div>
     <div class="footer">
+      <a class="about" href="./about.html">about</a>
       <a class="contact" href="./contact.html">contact</a>
-      <a class="impressum" href="./impressum.html">impressum</a>
   </div>
   </body>
 </html>
