--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
                 <img class="breathe-main" src="../pictures/breathe-main.png">
         <div class="project-content">
             <div class="left-content">
-                <img class="breathe-home" src="../pictures/home.jpg">
+                <img class="breathe-home" data-aos="fade-down" aos-duration="500" src="../pictures/home.jpg">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -50,12 +50,16 @@
                     anim id est laborum. </p>
                     <img class="breathe-home" src="../pictures/courses.jpg">
             </div>
+            <div class="footer">
+                    <a class="about" href="./about.html">about</a>
+                    <a class="contact" href="./contact.html">contact</a>
+            </div> 
         </div>
     </div>
-    <div class="footer">
+    <div id="footer-main">
+            <a class="about" href="./about.html">about</a>
             <a class="contact" href="./contact.html">contact</a>
-            <a class="impressum" href="./impressum.html">impressum</a>
-    </div> 
+        </div> 
     </div>
   </body>
 </html>
