--- a/index.html
+++ b/index.html
@@ -7,52 +7,32 @@
   </head>
 
   <body>  
+        <video autoplay muted loop id="myVideo">
+                <source src="../img/lavender-mobil.svg" type="video/mp4">
+        </video>
     <div id="container-bgd" class="container">
         <div id ="site-name">
             <h1 id="title" class="title-main"> <a href="./index.html">lanora</a></h1> 
             <br>
             <h5 id="subtitle" class="subtitle-main"> <a href="./index.html">web desing & development</a></h5>
             <div class="nav">
-                    <button id="projects-button">projects</button>
-                </div>
+                <button id="projects-button">projects</button>
+            </div>
         </div>
         <div id="project-container" class="hide-projects">
-                <img class="breathe-main" src="../pictures/breathe-main.png">
+                <img class="breathe-main" src="../img/breathe-main.png">
         <div class="project-content">
-            <div class="left-content">
-                <img class="breathe-home" data-aos="fade-down" aos-duration="500" src="../pictures/home.jpg">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
-                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
-                    anim id est laborum. </p>
+            <h2>Breathe Air Yoga & Meditationsstudio</h2>
+            <p class="project-title">Corporate Design for a fictional company </p>
+            <div id="slide" class="autoplay">
+                    <img class="breathe-home" src="../img/home.jpg">
+                    <img class="breathe-home" src="../img/studio.jpg">
+                    <img class="breathe-home" src="../img/courses.jpg">    
             </div>
-            <div class="right-content">
-                <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-                aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-                voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
-                occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
-                anim id est laborum. </p>
-                <img class="breathe-home" src="../pictures/studio.jpg">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
-                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
-                    anim id est laborum. </p>
-                    <img class="breathe-home" src="../pictures/courses.jpg">
-            </div>
+            <p>This website was an experiment to create content without any framework with plain HTML, CSS and a bit JavaScript.</p>
             <div class="footer">
-                    <a class="about" href="./about.html">about</a>
-                    <a class="contact" href="./contact.html">contact</a>
+                <a class="about" href="./about.html">about</a>
+                <a class="contact" href="./contact.html">contact</a>
             </div> 
         </div>
     </div>
