Added contact form

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <div class="form-container">
         <div class="">
             <div class="contact-form">  
-              <form id="contact" action="form.php" method="post">
+              <form id="contact" action="http://formspree.io/nora.la7@gmail.com">
                 <h3>Get in touch</h3>
                 <fieldset>
                   <input placeholder="Your name" type="text" tabindex="1" required autofocus>
