--- a/about.html
+++ b/about.html
@@ -14,33 +14,43 @@
                 <h5><a href="./index.html">web desing & development</a></h5>
             </div>
             <div class="about">
-                    <img class="portrait" src="../pictures/portrait.jpg">
-                <p>
-                    i am Nora currently learning web development and design in Salzburg. 
-                    I have a passion for web development for 2 years.</p>
-                <h6>what I have learned so far
-                </h6>
-                <p>   
+                    <div class="about-text">
+                            <p class="about-me">
+                                I think harmony is essential to create special things. I have studied art and art theory and I would like to combine 
+                                this ideas with my new knowledge in webdesign and development. Maybe it seems these are very different areas but 
+                                the opportunity to build something new, something that maybe can change things lies in both. This is why I have passion 
+                                for web development and why I would like to improve myself every day. 
+                        </div>
+        </div>
+        <img class="portrait" src="../img/portrait.jpg">
+        <div class="container-facts">
+                <button>what I have learned so far</button>
+                <p class="facts">   
                     HTML5
                     Bootstrap
                     Handlebars
+                    <br>
                     CSS
                     LESS
                     SASS
+                    <br>
                     JavaScript
                     Jquery
                     Nodejs
                     React
+                    <br>
                     Webpack
                     Git
                     Docker
+                    <br>
                     Wordpress
                     Magento
+                    <br>
                     PhotoShop
                     InDesign
                     Illustrator  
                 </p>
-            </div>
+        </div>
             <div class="footer">
                 <a class="about" href="./about.html">about</a>
                 <a class="contact" href="./contact.html">contact</a>
