--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <div class="form-container">
         <div class="">
             <div class="contact-form">  
-              <form id="contact" action="form.php" method="post">
+              <form id="contact" action="https://formspree.io/nora.la7@gmail.com" method="POST">
                 <h3>Get in touch</h3>
                 <fieldset>
                   <input placeholder="Your name" type="text" tabindex="1" required autofocus>
@@ -36,7 +36,8 @@
     <div class="contact-info">
         <p>
             Nora Lakics
-            <br>Saint-Julien-Strasse 4/7, 5020 Salzburg<br>
+            5020 Salzburg
+            <br>Saint-Julien-Strasse 4/7 <br>
             +436645519165<br><a href="mailto:nora.la7@gmail.com">nora.la7@gmail.com</a>
         </p>
       </div>
