Added contact form

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head><base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=no;">
     <title>Lanora Design</title>
@@ -41,5 +41,5 @@
             <a class="contact" href="./contact.html">contact</a>
         </div> 
     </div>
-  </body>
+  <script type="text/javascript" src="/norala.github.io/bundle.js"></script></body>
 </html>
