--- a/src/contact.html
+++ b/src/contact.html
@@ -18,16 +18,16 @@
               <form id="contact" action="https://formspree.io/nora.la7@gmail.com" method="POST">
                 <h3>Get in touch</h3>
                 <fieldset>
-                  <input placeholder="Your name" type="text" tabindex="1" required autofocus>
+                  <input placeholder="Your name" name="name" type="text" tabindex="1" required autofocus>
                 </fieldset>
                 <fieldset>
-                  <input placeholder="Your Email Address" type="email" tabindex="2" required>
+                  <input placeholder="Your Email Address" name="email" type="email" tabindex="2" required>
                 </fieldset>
                 <fieldset>
-                  <input placeholder="Your Phone Number" type="tel" tabindex="3" required>
+                  <input placeholder="Your Phone Number" name="phone" type="tel" tabindex="3" required>
                 </fieldset>
                 <fieldset>
-                  <textarea placeholder="Type your Message Here...." tabindex="5" required></textarea>
+                  <textarea placeholder="Type your Message Here...." name="message" tabindex="5" required></textarea>
                 </fieldset>
                 <button class="submit" name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
               </form>
