--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
   <body>  
         <video autoplay muted loop id="myVideo">
-                <source src="../img/lavender-mobil.mp4" type="video/mp4">
+                <source src="../img/black-white.mp4" type="video/mp4">
         </video>
     <div id="container-bgd" class="container">
         <div id ="site-name">
