--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
   </head>
 
   <body>  
-        <video autoplay muted loop id="myVideo">
+        <!-- <video autoplay muted loop id="myVideo">
                 <source src="../img/black-white.mp4" type="video/mp4">
-        </video>
+        </video> -->
     <div id="container-bgd" class="container">
         <div id ="site-name">
             <h1 id="title" class="title-main"> <a href="./index.html">lanora</a></h1> 
@@ -27,9 +27,16 @@
             <div id="slide" class="autoplay">
                     <img class="breathe-home" src="../img/home.jpg">
                     <img class="breathe-home" src="../img/studio.jpg">
-                    <img class="breathe-home" src="../img/courses.jpg">    
+                    <img class="breathe-home" src="../img/courses.jpg"> 
+                    <img class="breathe-home" src="../img/contact.jpg">    
             </div>
-            <p>This website was an experiment to create content without any framework with plain HTML, CSS and a bit JavaScript.</p>
+            <div class="project-content">
+                    <h2>ZauberGarten Spices</h2>
+                    <p class="project-title">Design for a fictional company </p>
+            <div id="slide" class="autoplay"> 
+                    <img class="breathe-home" src="../img/spices.jpg"> 
+                    <img class="breathe-home" src="../img/spices_sale.jpg">    
+            </div>
             <div class="footer">
                 <a class="about" href="./about.html">about</a>
                 <a class="contact" href="./contact.html">contact</a>
