Added pictures to slides

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
   </head>
 
   <body>  
-        <!-- <video autoplay muted loop id="myVideo">
-                <source src="../img/black-white.mp4" type="video/mp4">
-        </video> -->
     <div id="container-bgd" class="container">
         <div id ="site-name">
             <h1 id="title" class="title-main"> <a href="./index.html">lanora</a></h1> 
@@ -34,8 +31,13 @@
                     <h2>ZauberGarten Spices</h2>
                     <p class="project-title">Design for a fictional company </p>
             <div id="slide" class="autoplay"> 
+                    <img class="breathe-home" src="../img/spices_profil1.jpg"> 
+                    <img class="breathe-home" src="../img/spices-profil.jpg"> 
                     <img class="breathe-home" src="../img/spices.jpg"> 
-                    <img class="breathe-home" src="../img/spices_sale.jpg">    
+                    <img class="breathe-home" src="../img/spices_sale.jpg"> 
+                    <img class="breathe-home" src="../img/spices_product.jpg">
+                    <img class="breathe-home" src="../img/spices_colors.jpg">
+                    <img class="breathe-home" src="../img/spices_form.jpg">    
             </div>
             <div class="footer">
                 <a class="about" href="./about.html">about</a>
@@ -43,10 +45,10 @@
             </div> 
         </div>
     </div>
+    </div>
     <div id="footer-main">
             <a class="about" href="./about.html">about</a>
             <a class="contact" href="./contact.html">contact</a>
         </div> 
-    </div>
   <script type="text/javascript" src="/norala.github.io/bundle.js"></script></body>
 </html>
