--- a/src/contact.html
+++ b/src/contact.html
@@ -29,22 +29,21 @@
                 <fieldset>
                   <textarea placeholder="Type your Message Here...." name="message" tabindex="5" required></textarea>
                 </fieldset>
-                <button class="submit" name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+                <button class="submit" name="submit" type="submit" id="contact-submit">Send</button>
               </form>
             </div>
-    </div> 
+        </div> 
     <div class="contact-info">
         <p>
-            Nora Lakics
-            5020 Salzburg
-            <br>Saint-Julien-Strasse 4/7 <br>
-            +436645519165<br><a href="mailto:nora.la7@gmail.com">nora.la7@gmail.com</a>
+            Nora Lakics<br>
+            5020 Salzburg, Saint-Julien-Strasse 4/7 <br>
+            +43664 5519165
         </p>
       </div>
     </div>
-    <div class="footer">
+    <div id="footer-main">
       <a class="about" href="./about.html">about</a>
       <a class="contact" href="./contact.html">contact</a>
-  </div>
+    </div>
   </body>
 </html>
