--- a/index.html
+++ b/index.html
@@ -11,26 +11,32 @@
         <div id ="site-name">
             <h1 id="title" class="title-main"> <a href="./index.html">lanora</a></h1> 
             <br>
-            <h5 id="subtitle" class="subtitle-main"> <a href="./index.html">web desing & development</a></h5>
+            <span id="subtitle" class="subtitle-main"> <a href="./index.html">web desing & development</a></span>
             <div class="nav">
                 <button id="projects-button">projects</button>
             </div>
         </div>
         <div id="project-container" class="hide-projects">
-                <img class="breathe-main" src="../img/breathe-main.png">
+            <img class="main-image" src="../img/breathe-main.png">
         <div class="project-content">
             <h2>Breathe Air Yoga & Meditationsstudio</h2>
             <p class="project-title">Corporate Design for a fictional company </p>
             <div id="slide" class="autoplay">
-                    <img class="breathe-home" src="../img/home.jpg">
-                    <img class="breathe-home" src="../img/studio.jpg">
-                    <img class="breathe-home" src="../img/courses.jpg"> 
-                    <img class="breathe-home" src="../img/contact.jpg">    
+                <img class="breathe-home" src="../img/home.jpg">
+                <img class="breathe-home" src="../img/studio.jpg">
+                <img class="breathe-home" src="../img/courses.jpg"> 
+                <img class="breathe-home" src="../img/contact.jpg"> 
+                <img class="breathe-home" src="../img/folder_breathe.jpg"> 
+                <img class="breathe-home" src="../img/folder_breathe2.jpg">
+                <img class="breathe-home" src="../img/card_breathe.jpg">
+                <img class="breathe-home" src="../img/breathe_fonts.jpg"> 
+                <img class="breathe-home" src="../img/breathe_print.jpg">                
             </div>
             <div class="project-content">
-                    <h2>ZauberGarten Spices</h2>
-                    <p class="project-title">Design for a fictional company </p>
-            <div id="slide" class="autoplay"> 
+                <h2>ZauberGarten Spices</h2>
+                <p class="project-title">Design for a fictional company</p>
+                <img class="main-image-spices" src="../img/layout_spices.jpg">
+                <div id="slide" class="autoplay"> 
                     <img class="breathe-home" src="../img/spices_profil1.jpg"> 
                     <img class="breathe-home" src="../img/spices-profil.jpg"> 
                     <img class="breathe-home" src="../img/spices.jpg"> 
@@ -38,13 +44,13 @@
                     <img class="breathe-home" src="../img/spices_product.jpg">
                     <img class="breathe-home" src="../img/spices_colors.jpg">
                     <img class="breathe-home" src="../img/spices_form.jpg">    
-            </div>
-            <div class="footer">
+                </div>
+                <div class="footer">
                 <a class="about" href="./about.html">about</a>
                 <a class="contact" href="./contact.html">contact</a>
-            </div> 
+                </div> 
+            </div>
         </div>
-    </div>
     </div>
     <div id="footer-main">
             <a class="about" href="./about.html">about</a>
