--- a/src/about.html
+++ b/src/about.html
@@ -23,7 +23,7 @@
                         </div>
         </div>
         <img class="portrait" src="../img/portrait.jpg">
-            <div class="footer">
+            <div id="footer-main">
                 <a class="about" href="./about.html">about</a>
                 <a class="contact" href="./contact.html">contact</a>
             </div>
