Added styles to projects

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
   <body>  
     <div id="container-bgd" class="container">
-        <div id ="site-name">
+        <div id ="site-name" class="general">
             <h1 id="title" class="title-main"> <a href="./index.html">lanora</a></h1> 
             <br>
-            <span id="subtitle" class="subtitle-main"> <a href="./index.html">web desing & development</a></span>
+            <h5 id="subtitle" class="subtitle-main"> <a href="./index.html">web desing & development</a></h5>
             <div class="nav">
                 <button id="projects-button">projects</button>
             </div>
