--- a/about.html
+++ b/about.html
@@ -14,15 +14,18 @@
                 <h5><a href="./index.html">web desing & development</a></h5>
             </div>
             <div class="about">
-                    <div class="about-text">
-                            <p class="about-me">
-                                I think harmony is essential to create special things. I have studied art and art theory and I would like to combine 
-                                this ideas with my new knowledge in webdesign and development. Maybe it seems these are very different areas but 
-                                the opportunity to build something new, something that maybe can change things lies in both. This is why I have passion 
-                                for web development and why I would like to improve myself every day. 
-                        </div>
-        </div>
-        <img class="portrait" src="../img/portrait.jpg">
+                <div class="about-text">
+                    <p class="about-me">
+                        I think harmony is essential to create special things. I have studied art and art theory and I would like to combine 
+                        this ideas with my new knowledge in webdesign and development. Maybe it seems these are very different areas but 
+                        the opportunity to build something new, something that maybe can change things lies in both. This is why I have passion 
+                        for web development and why I would like to improve myself every day. 
+                    </p>
+                </div>
+            </div>
+            <div class="img-container">
+                <img class="portrait" src="../img/portrait.jpg">
+            </div>
             <div id="footer-main">
                 <a class="about" href="./about.html">about</a>
                 <a class="contact" href="./contact.html">contact</a>
