--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,11 @@
             </div>
         </div>
         <div id="project-container" class="hide-projects">
-            <img class="main-image" src="../img/breathe-main.png">
         <div class="project-content">
             <h2>Breathe Air Yoga & Meditationsstudio</h2>
             <p class="project-title">Corporate Design for a fictional company </p>
             <div id="slide" class="autoplay">
+                <img class="breathe-home" src="../img/breathe-main.png">
                 <img class="breathe-home" src="../img/home.jpg">
                 <img class="breathe-home" src="../img/studio.jpg">
                 <img class="breathe-home" src="../img/courses.jpg"> 
@@ -32,11 +32,11 @@
                 <img class="breathe-home" src="../img/breathe_fonts.jpg"> 
                 <img class="breathe-home" src="../img/breathe_print.jpg">                
             </div>
-            <div class="project-content">
+            <div class="project-content-spices">
                 <h2>ZauberGarten Spices</h2>
                 <p class="project-title">Design for a fictional company</p>
-                <img class="main-image-spices" src="../img/layout_spices.jpg">
                 <div id="slide" class="autoplay"> 
+                    <img class="breathe-home" src="../img/layout_spices.jpg">
                     <img class="breathe-home" src="../img/spices_profil1.jpg"> 
                     <img class="breathe-home" src="../img/spices-profil.jpg"> 
                     <img class="breathe-home" src="../img/spices.jpg"> 
