Added link style to project page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="project-content">
             <h2>Breathe Air Yoga & Meditationsstudio</h2>
             <p class="project-title">Corporate Design for a fictional company </p>
-            <a href="http://medien2018.bfi-training.net/7574851/breathe-yoga/index.html" target="_blank">Visit Website target="_blank"></a>
+            <a class="visit" href="http://medien2018.bfi-training.net/7574851/breathe-yoga/index.html" target="_blank">Visit Website</a>
             <div id="slide" class="autoplay">
                 <img class="breathe-home" src="../img/breathe-main.png">
                 <img class="breathe-home" src="../img/home.jpg">
